WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306933
Back navigation may never complete when navigating to a site with subframe
https://bugs.webkit.org/show_bug.cgi?id=306933
Summary
Back navigation may never complete when navigating to a site with subframe
Sihui Liu
Reported
2026-02-03 22:50:37 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-03 22:51:16 PST
<
rdar://problem/169597227
>
Sihui Liu
Comment 2
2026-02-03 23:09:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57845
EWS
Comment 3
2026-02-13 07:45:26 PST
Committed
307473@main
(c8533d6a3723): <
https://commits.webkit.org/307473@main
> Reviewed commits have been landed. Closing PR #57845 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug